--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="home_second">Home Second</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_menu">Menu</string>
+    <string name="title_add">Add</string>
+
+    <string name="hint_diary_title">제목을 입력하세요.</string>
+    <string name="hint_diary_contents">일기를 입력하세요.</string>
 </resources>
